fix word break on not burke comment

--- a/app/assets/stylesheets/comments/_list.sass
+++ b/app/assets/stylesheets/comments/_list.sass
@@ -9,6 +9,12 @@
   &:hover
     border-color: $accent-color
 
+  p
+    word-break: break-word
+    -webkit-hyphens: auto
+    -moz-hyphens: auto
+    hyphens: auto
+
   > *
     flex:
       grow: 1
